--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,12 @@
 
 .element-background-black {
   position: relative;
+  border-color: black;
+}
+
+.element-background-white {
+  position: relative;
+  border-color: black;
 }
 
 .element-background-black::after {
@@ -14,7 +20,20 @@
   width: 100%;
   height: 100%;
   background: white;
-  border: 2px solid #000;
+  border: 1px solid #000;
+  z-index: -1;
+  border-radius: calc(var(--radius) - 2px);
+}
+
+.element-background-white::after {
+  content: '';
+  position: absolute;
+  top: 12%;
+  left: 7%;
+  width: 100%;
+  height: 100%;
+  background: black;
+  border: 1px solid black;
   z-index: -1;
   border-radius: calc(var(--radius) - 2px);
 }
